--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
+    "google-spreadsheet": "^3.3.0",
     "node-cron": "^3.0.2",
+    "osu-web.js": "^1.2.2",
     "prettier": "^2.8.8"
   },
   "type": "module"
