--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node -r dotenv/config app.js"
   },
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@xata.io/client": "^0.24.0",
+    "axios": "^1.4.0",
     "babel-eslint": "^10.1.0",
+    "dotenv": "^16.1.3",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "google-spreadsheet": "^3.3.0",
