--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@xata.io/client": "^0.24.0",
     "axios": "^1.4.0",
-    "babel-eslint": "^10.1.0",
+    "discord.js": "^14.11.0",
     "dotenv": "^16.1.3",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
