--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-prettier": "^8.8.0",
     "google-spreadsheet": "^3.3.0",
     "node-cron": "^3.0.2",
+    "node-fetch": "^3.3.1",
     "osu-web.js": "^1.2.2",
     "prettier": "^2.8.8"
   },
