--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node -r dotenv/config app.js"
+    "start": "node -r dotenv/config --max-old-space-size=200 app.js"
   },
   "dependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@xata.io/client": "^0.24.0",
     "axios": "^1.4.0",
-    "discord.js": "^14.11.0",
     "dotenv": "^16.1.3",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
     "google-spreadsheet": "^3.3.0",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.1",
-    "osu-web.js": "^1.2.2",
-    "prettier": "^2.8.8"
+    "node-fetch": "^3.3.1"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8"
+  }
 }
