--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@xata.io/client": "^0.24.0",
+    "ably": "^1.2.40",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "google-spreadsheet": "^3.3.0",
+    "lodash": "^4.17.21",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1"
   },
